--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,4 +14,14 @@
     <string name="login_failed">"Login failed"</string>
     <string name="access_token">pk.eyJ1Ijoic2h1Y2hpMDciLCJhIjoiY2sydnBoMmQ4MDZ6azNobGpqMmx2ZWFnZiJ9.kfIZF0GCcZhK0nhl0OqKAQ</string>
     <string name="start_navigating">Start Navigating</string>
+    <string name="ad_hoc">Ad Hoc</string>
+    <string name="daily">Daily Commute</string>
+    <string name="settings">Settings</string>
+
+    <string-array name="Gender">
+        <item>Gender</item>
+        <item>Male</item>
+        <item>Female</item>
+        <item>Others</item>
+    </string-array>
 </resources>
