Week3 -  Mapbox - peer distance

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,6 +15,25 @@
     <string name="access_token">pk.eyJ1Ijoic2h1Y2hpMDciLCJhIjoiY2sydnBoMmQ4MDZ6azNobGpqMmx2ZWFnZiJ9.kfIZF0GCcZhK0nhl0OqKAQ</string>
     <string name="start_navigating">Start Navigating</string>
     <string name="show_routes">Show Routes</string>
-    <string name="simple_offline_end_progress_success">Downloaded</string>
     <string name="basic_offline_deleted_toast">Offline</string>
+    <!--Strings for OfflineManager activity-->
+    <string name="dialog_title">Name new region</string>
+    <string name="dialog_message">Downloads the map region you currently are viewing</string>
+    <string name="dialog_positive_button">Download</string>
+    <string name="dialog_negative_button">Cancel</string>
+    <string name="dialog_toast">Region name cannot be empty.</string>
+    <string name="end_progress_success">Region downloaded successfully.</string>
+    <string name="toast_no_regions_yet">You have no regions yet.</string>
+    <string name="toast_region_deleted">Region deleted</string>
+    <string name="navigate_positive_button">Navigate to</string>
+    <string name="navigate_neutral_button_title">Delete</string>
+    <string name="navigate_negative_button_title">Cancel</string>
+    <string name="navigate_title">Offline saved Maps</string>
+    <string name="region_name">Region %1$d</string>
+    <string name="set_region_name_hint">Enter name</string>
+    <string name="fellowUserDistance">1000</string>
+
+    <!--SimpleOfflineMapActivity activity-->
+    <string name="simple_offline_end_progress_success">Region downloaded successfully.</string>
+
 </resources>
