mapbox fragment update

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -29,7 +29,7 @@
     <string name="dialog_positive_button">Download</string>
     <string name="dialog_toast">Region name cannot be empty.</string>
     <string name="dialog_negative_button">Cancel</string>
-    <string name="navigate_title">Offline saved Maps</string>
+    <string name="navigate_title">offline saved Maps</string>
     <string name="navigate_positive_button">Navigate to</string>
     <string name="navigate_neutral_button_title">Delete</string>
     <string name="navigate_negative_button_title">Cancel</string>
