--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,7 +14,7 @@
     <string name="login_failed">"Login failed"</string>
     <string name="access_token">pk.eyJ1Ijoic2h1Y2hpMDciLCJhIjoiY2sydnBoMmQ4MDZ6azNobGpqMmx2ZWFnZiJ9.kfIZF0GCcZhK0nhl0OqKAQ</string>
     <string name="start_navigating">Start Navigating</string>
-    <string name="ad_hoc">Ad Hoc</string>
+    <string name="ad_hoc">Ad Hoc Commute</string>
     <string name="daily">Daily Commute</string>
     <string name="settings">Setting</string>
     <string name="navigation_drawer_open">Open Navigation Drawer</string>
