Broadcasting Status update to other peers

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -42,4 +42,5 @@
         <item>Female</item>
         <item>Others</item>
     </string-array>
+    <string name="searching_label">Searching</string>
 </resources>
