changes to download offline maps of ireland

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -43,4 +43,5 @@
         <item>Others</item>
     </string-array>
     <string name="searching_label">Searching</string>
+    <string name="offline_map">Offline Maps</string>
 </resources>
