--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,7 +16,7 @@
     <string name="start_navigating">Start Navigating</string>
     <string name="ad_hoc">Ad Hoc Commute</string>
     <string name="daily">Daily Commute</string>
-    <string name="settings">Setting</string>
+    <string name="settings">Settings</string>
     <string name="navigation_drawer_open">Open Navigation Drawer</string>
     <string name="navigation_drawer_close">Close Navigation Drawer</string>
     <string name="test_username">test</string>
