Commented location change in offline maps

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -44,7 +44,7 @@
     </string-array>
     <string name="searching_label">Searching</string>
     <string name="imagesolotravel">ImageSoloTravel</string>
-    <string name="offline_map">Offline Maps</string>
+    <string name="offline_map">Download Offline Map</string>
     <string name="search_location">Search location</string>
     <string name="wrong_direction">Wrong direction</string>
 </resources>
